tests/programs/array/array_of_mixed_tuples.rice.snap
---
source: tests/snapshots.rs
expression: output
---
success = false
stdout = ''
stderr = '''
Error:   × type mismatch
   ╭─[array_of_mixed_tuples.rice:2:37]
 1 │ fn main() {
 2 │   let x: [(int, int)] = [(0, 1, 3), (2, 3), (4, 5)] in
   ·                                     ───┬──
   ·                                        ╰── expected `(int, int, int)`, found `(int, int)`
 3 │   ()
   ╰────

'''
